[tool.poetry]
name = "leaf-spring"
version = "0.1.0"
description = "Leaf spring simulator"
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"
packages = [{include = "leaf_spring"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
